# Algoritmos_Em_Grafos

./: .gitignore  Readme.md
graph/: CMakeLists.txt  build.bat  main.cpp
graph/algorithms/include/: connected.hpp  minimum_spanning_tree.hpp  tracks.hpp  trails.hpp  utils.hpp
graph/algorithms/pseudocodes/: codes.md
graph/algorithms/src/: conected.cpp  dijkstra.c  minimum_spanning_tree.cpp  tracks.cpp  trails.cpp  utils.cpp
graph/data/: graph.txt
graph/data/input/: euler1.txt  euler2.txt  euler3.txt  euler4.txt  grafo-dkjstr.txt  grafo2-dkjstr.txt  graph.txt  graph_conex.txt  graph_dummy.txt  graph_forest.txt  graph_forest_2.txt  graph_vertex_connect.txt  graph_weighted.txt  k-6.txt
graph/data_structure/include/: graph.hpp  myDS.hpp
graph/data_structure/src/: graph.cpp
graph_with_cost/: graph_with_cost.cpp
